Update replica label type

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -78,7 +78,7 @@ services:
     deploy:
       placement:
         constraints:
-        - node.labels.type == secondary
+        - node.labels.type != primary
 
 networks:
   database: {}
