--- a/.github/workflows/build_main.yml
+++ b/.github/workflows/build_main.yml
@@ -1,12 +1,13 @@
-name: Build and Push Dev Image
+name: Build and Push Docker Image on Merged Pull Request
 
 on:
-  push:
-    branches:
-      - 'main'
+  pull_request:
+    types: [closed]
 
 jobs:
   build:
+    if: ${{ github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && startsWith(github.event.pull_request.head.ref, 'pg-v') }}
+
     runs-on: ubuntu-latest
 
     steps:
@@ -21,10 +22,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract branch name
-        id: extract_branch
-        run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v5
